--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 */obj
 */bin
-Logo2Svg/LogoBaseVisitor.cs
-Logo2Svg/Logo.interp
-Logo2Svg/LogoLexer.cs
-Logo2Svg/LogoLexer.interp
-Logo2Svg/LogoLexer.tokens
-Logo2Svg/LogoParser.cs
-Logo2Svg/Logo.tokens
-Logo2Svg/LogoVisitor.cs
+Logo2Svg/Language/LogoBaseVisitor.cs
+Logo2Svg/Language/Logo.interp
+Logo2Svg/Language/LogoLexer.cs
+Logo2Svg/Language/LogoLexer.interp
+Logo2Svg/Language/LogoLexer.tokens
+Logo2Svg/Language/LogoParser.cs
+Logo2Svg/Language/Logo.tokens
+Logo2Svg/Language/LogoVisitor.cs
 *~
