--- a/Logo2Svg/Logo2Svg.csproj
+++ b/Logo2Svg/Logo2Svg.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <UsingTask TaskName="BuildAntlr.BuildAntlr" AssemblyFile="../BuildAntlr/bin/Debug/netstandard2.0/BuildAntlr.dll"/>
+  <UsingTask TaskName="BuildAntlr.BuildAntlr" AssemblyFile="../BuildAntlr/bin/Debug/netstandard2.0/BuildAntlr.dll" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -17,14 +17,7 @@
   </ItemGroup>
 
   <Target Name="BuildAntlr" BeforeTargets="CoreCompile" Inputs="$(GrammarPath)/Logo.g4" Outputs="$(GrammarPath)/LogoParser.cs $(GrammarPath)/LogoLexer.cs $(GrammarPath)/LogoBaseVisitor.cs $(GrammarPath)/LogoVisitor.cs">
-     <BuildAntlr
-        JavaPath="/usr/bin/java"
-        AntlrJar="/opt/local/lib/antlr-4.13.1-complete.jar"
-        Listeners="false"
-        Namespace="Logo2Svg.Language"
-        Visitors="true"
-        OutputDir="$(GrammarPath)"
-        Files="$(GrammarPath)/Logo.g4">
+     <BuildAntlr JavaPath="/usr/bin/java" AntlrJar="/opt/local/lib/antlr-4.13.1-complete.jar" Listeners="false" Namespace="Logo2Svg.Language" Visitors="true" OutputDir="$(GrammarPath)" Files="$(GrammarPath)/Logo.g4">
      </BuildAntlr>
      <ItemGroup>
         <Compile Include="$(GrammarPath)/LogoParser.cs" />
