--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,8 @@ jobs:
         dotnet-version: 7.0.x
     - name: Restore dependencies
       run: dotnet restore
+    - name: Build AntlrBuild project
+      run: dotnet build --no-restore BuildAntlr
     - name: Build
       run: dotnet build --no-restore
     - name: Test
