- Added If/IfElse and boolean utils

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 */obj
 */bin
-Logo2Svg/Language/LogoBaseVisitor.cs
+Logo2Svg/Language/LogoParserBaseVisitor.cs
 Logo2Svg/Language/Logo.interp
 Logo2Svg/Language/LogoLexer.cs
 Logo2Svg/Language/LogoLexer.interp
 Logo2Svg/Language/LogoLexer.tokens
+Logo2Svg/Language/LogoParser.interp
+Logo2Svg/Language/LogoParser.tokens
 Logo2Svg/Language/LogoParser.cs
 Logo2Svg/Language/Logo.tokens
-Logo2Svg/Language/LogoVisitor.cs
+Logo2Svg/Language/LogoParserVisitor.cs
 Logo2Svg/.idea
 *~
 .idea/
 Logo.sln.DotSettings.user
+gen/
