--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
     - name: Install Java
       run: sudo apt-get update -y && sudo apt-get install -y default-jre
-    - name: Download and Install Antlr
-      run: sudo mkdir -p /opt/local/lib && sudo curl -L "https://www.antlr.org/download/antlr-4.13.1-complete.jar" -o /opt/local/lib/antlr-4.13.1-complete.jar
+        #    - name: Download and Install Antlr
+        #run: sudo mkdir -p /opt/local/lib && sudo curl -L "https://www.antlr.org/download/antlr-4.13.1-complete.jar" -o /opt/local/lib/antlr-4.13.1-complete.jar
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -23,8 +23,8 @@ jobs:
         dotnet-version: 7.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build AntlrBuild project
-      run: dotnet build --no-restore BuildAntlr
+        #- name: Build AntlrBuild project
+        #run: dotnet build --no-restore BuildAntlr
     - name: Build
       run: dotnet build --no-restore
     - name: Test
